# esp32-radio-tranciever

./: .gitignore  .gitmodules  LICENSE  README.md
10_Message -webserver/frontend/: index.html
10_Message -webserver/main/: CMakeLists.txt  Server.c  http_handler.c  http_handler.h  softAP.c  softAP.h  string_nvs.c  string_nvs.h
10_Message-webserver/: CMakeLists.txt  sdkconfig  sdkconfig.old
10_Message-webserver/frontend/: index.html
10_Message-webserver/main/: CMakeLists.txt  Server.c  string_nvs.c  string_nvs.h
1_CommandTransciever/: CMakeLists.txt
1_gpio_control/: CMakeLists.txt
2_Transmitter/: partition_table.csv  sdkconfig
2_potentiometer/: CMakeLists.txt  sdkconfig
3_Receiver/: sdkconfig.old
3_oled/: CMakeLists.txt
4_pwm_motor/: CMakeLists.txt
5_spi/: CMakeLists.txt
6_spi/: CMakeLists.txt
7_Transciever/: CMakeLists.txt
8_CommandTransmitter/: CMakeLists.txt
9_MessageTransciever/: CMakeLists.txt
Components/: CMakeList.txt  CMakeLists.txt
Motor_Driver/: CMakeLists.txt  sdkconfig
Notes/: Communication_Protocol.md  LED Blink_Code.md  NRF24L01.md  Pull-up_Pull-down_Resistors.md  Readme.md
SPI_TXRX/: CMakeLists.txt  sdkconfig
SPI_Task_R/: Makefile
code/: 1 gpio control.c  2 Potentiometer.c  3 oled.c
components/: CMakeLists.txt
components/include/: SPI.h  motor.h  oled.h  spi.h  spi2.h  switch.h  u8g2_esp32_hal.h
components/src/: SPI.c  motor.c  oled.c  spi.c  spi2.c  switch.c
documentation/: 1_led_blink.md  2_kicad.md  4_Adc notes.md  5_OLED.md  6_repo_file_structure.md
notes/: 1_led_blink.md  3_Communication Protocols.md
(+42 files in other folders)
